--- a/index.html
+++ b/index.html
@@ -292,10 +292,9 @@
       <img src="images/img-3.svg" alt="">
       <img src="images/img-4.svg" alt="">
    </section>
-
    <section class="__flashsales container">
       <div class="__flashsales-box">
-         <h1 class="__flashsale-title">2 FOR $29 USD</h1>
+         <h1 class="__flashsales-title">2 FOR $29 USD</h1>
          <a class="__btn-theme" href="#">
             <span class="__btn-theme-left"></span>
             <span class="__btn-theme-right"></span>
@@ -303,7 +302,7 @@
          </a>
       </div>
       <div>
-         <div class="row row-cols-1 row-cols-md-3 g-4" style="width: 100%;">
+         <div class="row row-cols-1 row-cols-md-2 g-4" style="width: 85%;">
             <div class="col">
                <div class="card">
                <div class="img">
@@ -391,64 +390,6 @@
                </div>
                </div>
             </div>            
-            <div class="col">
-               <div class="card">
-               <div class="img">
-                  <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
-                  <div class="card-menu">
-                     <a href="#"><i class="fa-regular fa-repeat"></i></a>
-                     <a href="#"><i class="fa-regular fa-heart"></i></a>
-                     <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
-                  </div>
-                  <a class="__btn-theme btn-card-theme" href="#">
-                     <span class="__btn-theme-left"></span>
-                     <span class="__btn-theme-right"></span>
-                     QUICK VIEW
-                  </a>
-               </div>
-               <div class="card-body">
-                  <p class="card-category">Category</p>
-                  <h5 class="card-title">Modern Black Blouse</h5>
-                  <p class="card-rating">
-                     <i class="fa-sharp fa-solid fa-star"></i>
-                     <i class="fa-sharp fa-solid fa-star"></i>
-                     <i class="fa-sharp fa-solid fa-star"></i>
-                     <i class="fa-sharp fa-solid fa-star"></i>
-                     <i class="fa-sharp fa-solid fa-star"></i>
-                  </p>
-                  <p class="card-price">$35.00</p>
-               </div>
-               </div>
-            </div>
-            <div class="col">
-               <div class="card">
-               <div class="img">
-                  <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
-                  <div class="card-menu">
-                     <a href="#"><i class="fa-regular fa-repeat"></i></a>
-                     <a href="#"><i class="fa-regular fa-heart"></i></a>
-                     <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
-                  </div>
-                  <a class="__btn-theme btn-card-theme" href="#">
-                     <span class="__btn-theme-left"></span>
-                     <span class="__btn-theme-right"></span>
-                     QUICK VIEW
-                  </a>
-               </div>
-               <div class="card-body">
-                  <p class="card-category">Category</p>
-                  <h5 class="card-title">Modern Black Blouse</h5>
-                  <p class="card-rating">
-                     <i class="fa-sharp fa-solid fa-star"></i>
-                     <i class="fa-sharp fa-solid fa-star"></i>
-                     <i class="fa-sharp fa-solid fa-star"></i>
-                     <i class="fa-sharp fa-solid fa-star"></i>
-                     <i class="fa-sharp fa-solid fa-star"></i>
-                  </p>
-                  <p class="card-price">$35.00</p>
-               </div>
-               </div>
-            </div>
             <div class="col">
                <div class="card">
                <div class="img">
@@ -481,6 +422,135 @@
          </div>
       </div>
    
+   </section>
+   <section class="__flashsales container">
+      <div class="row row-cols-1 row-cols-md-2 g-4" style="width: 85%;">
+         <div class="col">
+            <div class="card">
+            <div class="img">
+               <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+               <div class="card-menu">
+                  <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                  <a href="#"><i class="fa-regular fa-heart"></i></a>
+                  <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+               </div>
+               <a class="__btn-theme btn-card-theme" href="#">
+                  <span class="__btn-theme-left"></span>
+                  <span class="__btn-theme-right"></span>
+                  QUICK VIEW
+               </a>
+            </div>
+            <div class="card-body">
+               <p class="card-category">Category</p>
+               <h5 class="card-title">Modern Black Blouse</h5>
+               <p class="card-rating">
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+               </p>
+               <p class="card-price">$35.00</p>
+            </div>
+         </div>
+      </div>
+         <div class="col">
+            <div class="card">
+            <div class="img">
+               <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+               <div class="card-menu">
+                  <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                  <a href="#"><i class="fa-regular fa-heart"></i></a>
+                  <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+               </div>
+               <a class="__btn-theme btn-card-theme" href="#">
+                  <span class="__btn-theme-left"></span>
+                  <span class="__btn-theme-right"></span>
+                  QUICK VIEW
+               </a>
+            </div>
+            <div class="card-body">
+               <p class="card-category">Category</p>
+               <h5 class="card-title">Modern Black Blouse</h5>
+               <p class="card-rating">
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+               </p>
+               <p class="card-price">$35.00</p>
+            </div>
+            </div>
+         </div>            
+         <div class="col">
+            <div class="card">
+            <div class="img">
+               <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+               <div class="card-menu">
+                  <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                  <a href="#"><i class="fa-regular fa-heart"></i></a>
+                  <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+               </div>
+               <a class="__btn-theme btn-card-theme" href="#">
+                  <span class="__btn-theme-left"></span>
+                  <span class="__btn-theme-right"></span>
+                  QUICK VIEW
+               </a>
+            </div>
+            <div class="card-body">
+               <p class="card-category">Category</p>
+               <h5 class="card-title">Modern Black Blouse</h5>
+               <p class="card-rating">
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+               </p>
+               <p class="card-price">$35.00</p>
+            </div>
+            </div>
+         </div>            
+         <div class="col">
+            <div class="card">
+            <div class="img">
+               <img src="Images/Predator_Wallpaper_5000x2814.png" alt="">
+               <div class="card-menu">
+                  <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                  <a href="#"><i class="fa-regular fa-heart"></i></a>
+                  <a href="#"><i class="fa-regular fa-bag-shopping"></i></a>      
+               </div>
+               <a class="__btn-theme btn-card-theme" href="#">
+                  <span class="__btn-theme-left"></span>
+                  <span class="__btn-theme-right"></span>
+                  QUICK VIEW
+               </a>
+            </div>
+            <div class="card-body">
+               <p class="card-category">Category</p>
+               <h5 class="card-title">Modern Black Blouse</h5>
+               <p class="card-rating">
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+                  <i class="fa-sharp fa-solid fa-star"></i>
+               </p>
+               <p class="card-price">$35.00</p>
+            </div>
+            </div>
+         </div>
+      </div>   
+      <div class="__flashsales-box">
+         <h1 class="__flashsales-title">2 FOR $29 USD</h1>
+         <a class="__btn-theme" href="#">
+            <span class="__btn-theme-left"></span>
+            <span class="__btn-theme-right"></span>
+            Flash Sale
+         </a>
+      </div>
+
    </section>
    
 
