--- a/index.html
+++ b/index.html
@@ -15,24 +15,23 @@
 <body>
 
    <header class="__gradient-gray container">
-      <nav class="__navbar container">
-         <div class="__logo">
-            Fixxo.
-         </div>
-         <div class="__nav-links">
-            <a href="#">Home</a>
-            <a href="#">Categories</a>
-            <a href="#">Products</a>
-            <a href="#">Contacts</a>
-         </div>
-         <div class="__nav-icon-links">
-            <a href="#"><i class="fa-regular fa-magnifying-glass"></i></a>
-            <a href="#"><i class="fa-regular fa-repeat"></i></a>
-            <a href="#"><span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-theme">1</span><i class="fa-regular fa-heart"></i></a>
-            <a href="#"><span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-theme">3</span><i class="fa-regular fa-bag-shopping"></i></a>
-         </div>
-      </nav>
-   </div>
+         <nav class="__navbar container">
+               <div class="__logo">
+                  Fixxo.
+               </div>
+               <div class="__nav-links">
+                     <a class="__active"  href="index.html">Home</a>
+                     <a href="#">Categories</a>
+                     <a href="#">Products</a>
+                     <a href="contact.html">Contacts</a>
+               </div>
+               <div class="__nav-icon-links">
+                     <a href="#"><i class="fa-regular fa-magnifying-glass"></i></a>
+                     <a href="#"><i class="fa-regular fa-repeat"></i></a>
+                     <a href="#"><span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-theme">1</span><i class="fa-regular fa-heart"></i></a>
+                     <a href="#"><span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-theme">3</span><i class="fa-regular fa-bag-shopping"></i></a>
+               </div>
+         </nav>
    <section class="__showcase">
       <img src="Images/img-2.svg" class="__img-left" alt="showcase-img-2">
       <div class="__showcase-body">
