--- a/contact.html
+++ b/contact.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="discription" content="Tutorial">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <script src="https://kit.fontawesome.com/41c8b474e2.js" crossorigin="anonymous"></script>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-   <link href="css/style.css" rel="stylesheet">   
-   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+   <link href="css/style.css" rel="stylesheet">
+   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"></script>
    <script defer src="js/script.js"></script>
 
    <title>Fixxo.</title>
 </head>
+
 <body>
 
    <header class="container">
@@ -28,24 +33,46 @@
          <div class="__nav-icon-links">
             <a href="#"><i class="fa-regular fa-magnifying-glass"></i></a>
             <a href="#"><i class="fa-regular fa-repeat"></i></a>
-            <a href="#"><span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-theme">1</span><i class="fa-regular fa-heart"></i></a>
-            <a href="#"><span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-theme">3</span><i class="fa-regular fa-bag-shopping"></i></a>
+            <a href="#"><span
+                  class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-theme">1</span><i
+                  class="fa-regular fa-heart"></i></a>
+            <a href="#"><span
+                  class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-theme">3</span><i
+                  class="fa-regular fa-bag-shopping"></i></a>
          </div>
       </nav>
    </header>
 
-   <section class="bredcrumb container">
-        <div class="container">
-            <a href="index.html" class="me-2">Home</a>
-        </div>
-    
+   <section class="breadcrumb container">
+      <div class="container">
+         <li><a href="index.html" class="me-2">Home</a></li>
+         <li>Contacts</li>
+      </div>
+
    </section>
 
-   
-   
-   
-   
+   <section class="map">
+      <iframe class="google-map"
+         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d110840.64550448181!2d18.013403726093767!3d59.36669466754265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d86c5590a35%3A0xac5dd727a529fe56!2sEC%20Utbildning%20AB!5e0!3m2!1sen!2sse!4v1668430464619!5m2!1sen!2sse"
+         allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+   </section>
+
+   <section class="contact-form">
+      <div class="container">
+         <h2>Come in contact with Us</h2>
+         <form>
+             <input id="name" text="text">
+             <input id="email" type="email">
+             <textarea id="message"></textarea>
+             <button type="submit" class="__btn-theme">SEND</button>
+         </form>
+      </div>
+
+   </section>
+
+
    <div style="height: 5000px;"></div>
-      
+
 </body>
+
 </html>
