--- a/index.html
+++ b/index.html
@@ -552,9 +552,19 @@
 
    </section>
    
-
-
-   <div style="height: 5000px;"></div>
+   
+   
+   
+   <footer>
+      <div class="socialmedia">
+         <a href="#"><i class="fa-brands fa-facebook"></i></a>
+         <a href="#"><i class="fa-brands fa-twitter"></i></a>
+         <a href="#"><i class="fa-brands fa-instagram"></i></a>
+         <a href="#"><i class="fa-brands fa-google"></i></a>
+         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+      </div>
+      <div>© 2022 Fixxo. All Rights Reserved</div>
+   </footer>
       
 </body>
 </html>
