--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 <body>
 
    <header class="container">
-      <nav class="__navbar container">
+      <nav class="__navbar container" style="display:none">
          <div class="__logo">
             Fixxo.
          </div>
@@ -43,14 +43,14 @@
       </nav>
    </header>
 
-   <section class="breadcrumb container">
+   <section class="breadcrumb container" >
       <div class="container">
          <li><a href="index.html" class="me-2">Home</a></li>
          <li>Contacts</li>
       </div>
    </section>
 
-   <section class="map">
+   <section class="map" style="display:none">
       <iframe class="google-map"
          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d110840.64550448181!2d18.013403726093767!3d59.36669466754265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465f9d86c5590a35%3A0xac5dd727a529fe56!2sEC%20Utbildning%20AB!5e0!3m2!1sen!2sse!4v1668430464619!5m2!1sen!2sse"
          allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
